Added microformats on manage_reservations

--- a/hotel_system/hotel_stats/templates/manage_reservations.html
+++ b/hotel_system/hotel_stats/templates/manage_reservations.html
@@ -9,189 +9,141 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1>Manage Reservations</h1>
+<div class="container h-reservation">
 
-        <!-- Add Reservation Section -->
-        <div class="stats-card" id="addReservation">
-            <h3>Add New Reservation</h3>
-            <form id="addReservationForm">
-                <div class="form-group">
-                    <!-- Hotel Type (radio buttons) -->
-                    <label for="hotelType">Hotel Type</label>
-                    <div class="radio-group">
-                        <label>
-                            <input type="radio" name="hotelType" value="Resort" id="resortHotel"> Resort Hotel
-                        </label>
-                        <label>
-                            <input type="radio" name="hotelType" value="City" id="cityHotel"> City Hotel
-                        </label>
-                    </div>
+    <h1>Manage Reservations</h1>
 
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" name="name" placeholder="Enter full name" required>
+    <!-- Add Reservation Section -->
+    <div class="stats-card" id="addReservation">
+        <h3>Add New Reservation</h3>
+        <form id="addReservationForm" class="h-entry">
+            <div class="form-group">
 
-                    <label for="country">Country</label>
-                    <select id="country" name="country">
-                        <option value="" disabled selected>Select a Country</option>
-                    </select>
-
-                    <!-- Arrival Date -->
-                    <label for="arrivalDate">Arrival Date</label>
-                    <input type="date" id="arrivalDate" name="arrivalDate">
-
-                    <!-- Lead Time -->
-                    <label for="leadTime">Lead Time (days in advance)</label>
-                    <input type="number" id="leadTime" name="leadTime" min="0" required>
-
-                    <!-- Stays in Week Nights -->
-                    <label for="stays_in_week_nights">Stays in Week Nights</label>
-                    <input type="number" id="stays_in_week_nights" name="stays_in_week_nights" placeholder="Enter number of week nights">
-
-                    <!-- Stays in Weekend Nights -->
-                    <label for="stays_in_weekend_nights">Stays in Weekend Nights</label>
-                    <input type="number" id="stays_in_weekend_nights" name="stays_in_weekend_nights" placeholder="Enter number of weekend nights">
-        
-                    <!-- Meal Type (radio buttons) -->
-                    <label for="meal">Meal Type</label>
-                    <div class="radio-group">
-                        <label>
-                            <input type="radio" name="meal" value="BB" id="bbMeal"> BB (Bed & Breakfast)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="HB" id="hbMeal"> HB (Half Board)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="FB" id="scMeal"> FB (Full Board)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="Other" id="otherMeal"> Other
-                        </label>
-                    </div>
-
-                    <label for="adults">Number of Adults</label>
-                    <input type="number" id="adults" name="adults" min="1" required>
-
-                    <label for="children">Number of Children</label>
-                    <input type="number" id="children" name="children" min="0" required>
-
-                    <label for="babies">Number of Babies</label>
-                    <input type="number" id="babies" name="babies" min="0" required>
-
-                    <!-- ADR -->
-                    <label for="adr">ADR (Average Daily Rate)</label>
-                    <input type="number" id="adr" name="adr" min="0" required>
-
-                    <!-- Is Repeated Guest -->
-                    <label for="isRepeatedGuest">Is Repeated Guest?</label>
-                    <div class="radio-group">
-                        <label><input type="radio" name="isRepeatedGuest" value="true" required> Yes</label>
-                        <label><input type="radio" name="isRepeatedGuest" value="false" required> No</label>
-                    </div>
-
-                    <button type="submit" class="manage-link">Add Reservation</button>
+                <label for="hotelType">Hotel Type</label>
+                <div class="radio-group p-hotel-type">
+                    <label><input type="radio" name="hotelType" value="Resort" id="resortHotel"> Resort Hotel</label>
+                    <label><input type="radio" name="hotelType" value="City" id="cityHotel"> City Hotel</label>
                 </div>
-            </form>
-        </div>
 
-        <!-- Get Reservation Section -->
-        <div class="stats-card" id="getReservation">
-            <h3>Get Reservation</h3>
-            <form id="getReservationForm">
-                <div class="form-group">
-                    <label for="getReservationID">Reservation ID</label>
-                    <input type="text" id="getReservationID" name="reservation_id" required>
-                    
-                    <button type="submit" class="manage-link">Get Reservation</button>
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" class="p-name" placeholder="Enter full name" required>
+
+                <label for="country">Country</label>
+                <select id="country" name="country" class="p-country-name">
+                    <option value="" disabled selected>Select a Country</option>
+                </select>
+
+                <label for="arrivalDate">Arrival Date</label>
+                <input type="date" id="arrivalDate" name="arrivalDate" class="dt-start">
+
+                <label for="leadTime">Lead Time (days in advance)</label>
+                <input type="number" id="leadTime" name="leadTime" min="0" required class="p-lead-time">
+                <!--
+                <label for="stays_in_week_nights">Stays in Week Nights</label>
+                <input type="number" id="stays_in_week_nights" name="stays_in_week_nights" class="p-week-nights">
+
+                <label for="stays_in_weekend_nights">Stays in Weekend Nights</label>
+                <input type="number" id="stays_in_weekend_nights" name="stays_in_weekend_nights" class="p-weekend-nights">
+                -->
+                <label for="meal">Meal Type</label>
+                <div class="radio-group p-meal">
+                    <label><input type="radio" name="meal" value="BB" id="bbMeal"> BB (Bed & Breakfast)</label>
+                    <label><input type="radio" name="meal" value="HB" id="hbMeal"> HB (Half Board)</label>
+                    <label><input type="radio" name="meal" value="SC" id="scMeal"> SC (Self Catering)</label>
+                    <label><input type="radio" name="meal" value="FB" id="fbMeal"> FB (Full Board)</label>
+                    <label><input type="radio" name="meal" value="Other" id="otherMeal"> Other</label>
                 </div>
-            </form>
 
-            <div id="reservationDetails"></div> <!-- This section will display fetched details -->
-        </div>
+                <label for="adults">Number of Adults</label>
+                <input type="number" id="adults" name="adults" min="1" required class="p-num-adults">
 
-        
-        <!-- Modify Reservation Section -->
-        <div class="stats-card" id="modifyReservation">
-            <h3>Modify Reservation</h3>
-            <form id="modifyReservationForm">
-                <div class="form-group">
-                    <label for="modifyReservationID">Reservation ID</label>
-                    <input type="text" id="modifyReservationID" name="reservation_id" required>
+                <label for="children">Number of Children</label>
+                <input type="number" id="children" name="children" min="0" required class="p-num-children">
 
-                    <label for="modifyArrivalDate">Arrival Date</label>
-                    <input type="date" id="modifyArrivalDate" name="arrival_date">
+                <label for="babies">Number of Babies</label>
+                <input type="number" id="babies" name="babies" min="0" required class="p-num-babies">
 
-                    <!-- Stays in Week Nights -->
-                    <!-- <label for="modifyStaysInWeek">Stays in Week Nights</label>
-                    <input type="number" id="modifyStaysInWeek" name="modifyStaysInWeek" placeholder="Enter number of week nights"> -->
+                <label for="adr">ADR (Average Daily Rate)</label>
+                <input type="number" id="adr" name="adr" min="0" required class="p-adr">
 
-                    <!-- Stays in Weekend Nights -->
-                    <!-- <label for="modifyStaysInWeekend">Stays in Weekend Nights</label>
-                    <input type="number" id="modifyStaysInWeekend" name="modifyStaysInWeekend" placeholder="Enter number of weekend nights"> -->
-        
-
-                    <label for="isCanceled">Is the reservation canceled?</label>
-                    <div class="radio-group">
-                        <label>
-                            <input type="radio" name="isCanceled" value="1" id="yesCanceled"> Yes
-                        </label>
-                        <label>
-                            <input type="radio" name="isCanceled" value="0" id="noCanceled"> No
-                        </label>
-                    </div>
-
-                    <label for="modifyMeal">Meal Type</label>
-                    <div class="radio-group">
-                        <label>
-                            <input type="radio" name="meal" value="BB" id="bbMeal"> BB (Bed & Breakfast)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="HB" id="hbMeal"> HB (Half Board)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="SC" id="scMeal"> SC (self Catering)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="FB" id="fbMeal"> FB (Full Board)
-                        </label>
-                        <label>
-                            <input type="radio" name="meal" value="Other" id="otherMeal"> Other
-                        </label>
-                    </div>
-
-                    <button type="submit" class="manage-link">Modify Reservation</button>
+                <label for="isRepeatedGuest">Is Repeated Guest?</label>
+                <div class="radio-group p-repeated">
+                    <label><input type="radio" name="isRepeatedGuest" value="true" required> Yes</label>
+                    <label><input type="radio" name="isRepeatedGuest" value="false" required> No</label>
                 </div>
-            </form>
-        </div>
 
-        <!-- Delete Reservation Section -->
-        <div class="stats-card" id="deleteReservation">
-            <h3>Delete Reservation</h3>
-            <form id="deleteReservationForm">
-                <div class="form-group">
-                    <label for="deleteReservationID">Reservation ID</label>
-                    <input type="text" id="deleteReservationID" name="reservation_id" required>
-
-                    <button type="submit" class="manage-link">Delete Reservation</button>
-                </div>
-            </form>
-        </div>
-
-        <!-- Link to go back to the dashboard or any other page -->
-        <div class="manage-link-container">
-            <a href="/" class="manage-link">Back to Dashboard</a>
-        </div>
+                <button type="submit" class="manage-link">Add Reservation</button>
+            </div>
+        </form>
     </div>
 
-    <script type="application/json" id="countries-codes">
-        {{ codes|safe }}
-    </script>
+    <!-- Get Reservation Section -->
+    <div class="stats-card" id="getReservation">
+        <h3>Get Reservation</h3>
+        <form id="getReservationForm" class="h-entry">
+            <div class="form-group">
+                <label for="getReservationID">Reservation ID</label>
+                <input type="text" id="getReservationID" name="reservation_id" required class="uid">
 
-    <!-- Add JS File -->
-    <script src="{% static 'js/manage_reservations.js' %}"></script>
+                <button type="submit" class="manage-link">Get Reservation</button>
+            </div>
+        </form>
+        <div id="reservationDetails" class="p-note"></div>
+    </div>
+
+    <!-- Modify Reservation Section -->
+    <div class="stats-card" id="modifyReservation">
+        <h3>Modify Reservation</h3>
+        <form id="modifyReservationForm" class="h-entry">
+            <div class="form-group">
+                <label for="modifyReservationID">Reservation ID</label>
+                <input type="text" id="modifyReservationID" name="reservation_id" required class="uid">
+
+                <label for="modifyArrivalDate">Arrival Date</label>
+                <input type="date" id="modifyArrivalDate" name="arrival_date" class="dt-start">
+
+                <label for="isCanceled">Is the reservation canceled?</label>
+                <div class="radio-group p-canceled">
+                    <label><input type="radio" name="isCanceled" value="1" id="yesCanceled"> Yes</label>
+                    <label><input type="radio" name="isCanceled" value="0" id="noCanceled"> No</label>
+                </div>
+
+                <label for="modifyMeal">Meal Type</label>
+                <div class="radio-group p-meal">
+                    <label><input type="radio" name="meal" value="BB" id="bbMeal"> BB</label>
+                    <label><input type="radio" name="meal" value="HB" id="hbMeal"> HB</label>
+                    <label><input type="radio" name="meal" value="SC" id="scMeal"> SC</label>
+                    <label><input type="radio" name="meal" value="FB" id="fbMeal"> FB</label>
+                    <label><input type="radio" name="meal" value="Other" id="otherMeal"> Other</label>
+                </div>
+
+                <button type="submit" class="manage-link">Modify Reservation</button>
+            </div>
+        </form>
+    </div>
+
+    <!-- Delete Reservation Section -->
+    <div class="stats-card" id="deleteReservation">
+        <h3>Delete Reservation</h3>
+        <form id="deleteReservationForm" class="h-entry">
+            <div class="form-group">
+                <label for="deleteReservationID">Reservation ID</label>
+                <input type="text" id="deleteReservationID" name="reservation_id" required class="uid">
+
+                <button type="submit" class="manage-link">Delete Reservation</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="manage-link-container">
+        <a href="/" class="u-url manage-link">Back to Dashboard</a>
+    </div>
+</div>
+
+<script type="application/json" id="countries-codes">
+    {{ codes|safe }}
+</script>
+<script src="{% static 'js/manage_reservations.js' %}"></script>
 
 </body>
 </html>
